--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:prod": "node ./dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "lint": "npx eslint src --ignore-pattern .ts",
+    "lint:fix": "npx eslint src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status": "^1.7.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3"
   },
@@ -24,6 +30,7 @@
     "@typescript-eslint/parser": "^7.13.1",
     "eslint": "^8.57.0",
     "globals": "^15.6.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1"
   }
