--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.3"
+    "mongoose": "^8.4.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
